# lossless-text-compression-engine

./: .gitignore  CMakeLists.txt  README.md  package-lock.json  package.json  server.js
include/: Compressor.h  Decoder.h  Encoder.h  FileManager.h  HuffmanTree.h  Node.h
public/: app.js  index.html  style.css
src/: Decoder.cpp  Encoder.cpp  FileManager.cpp  HuffmanCompressor.cpp  HuffmanTree.cpp  main.cpp
tests/: test_huffman.cpp
